examples working even smoother